finished desktop mode page and modify README.md

--- a/index.html
+++ b/index.html
@@ -21,29 +21,35 @@
           to ensure that your project is successful</p>
       </div>
       <div class="windows">
-        <div class="window">
-          <div class="window-supervisor"></div>
-          <h2>Supervisor</h2>
-          <p>Monitors activity to identify project roadblocks</p>
-          <div class="img supervisor"></div>
+        <div class="col">
+          <div class="window one">
+            <div class="window-supervisor"></div>
+            <h2>Supervisor</h2>
+            <p>Monitors activity to identify project roadblocks</p>
+            <div class="img supervisor"></div>
+          </div>
         </div>
-        <div class="window">
-          <div class="window-team"></div>
-          <h2>Team Builder</h2>
-          <p>Scans our talent network to create the optimal team for your project</p>
-          <div class="img team"></div>
+        <div class="col">
+          <div class="window two">
+            <div class="window-team"></div>
+            <h2>Team Builder</h2>
+            <p>Scans our talent network to create the optimal team for your project</p>
+            <div class="img team"></div>
+          </div>
+          <div class="window three">
+            <div class="window-karma"></div>
+            <h2>Karma</h2>
+            <p>Regularly evaluates our talent to ensure quality</p>
+            <div class="img karma"></div>
+          </div>
         </div>
-        <div class="window">
-          <div class="window-karma"></div>
-          <h2>Karma</h2>
-          <p>Regularly evaluates our talent to ensure quality</p>
-          <div class="img karma"></div>
-        </div>
-        <div class="window">
-          <div class="window-calculator"></div>
-          <h2>Calculator</h2>
-          <p>Uses data from past projects to provide better delivery estimates</p>
-          <div class="img calculator"></div>
+        <div class="col">
+          <div class="window four">
+            <div class="window-calculator"></div>
+            <h2>Calculator</h2>
+            <p>Uses data from past projects to provide better delivery estimates</p>
+            <div class="img calculator"></div>
+          </div>
         </div>
       </div>
     </div>
